[gd_scene load_steps=12 format=3 uid="uid://drjieinylpumd"]

[ext_resource type="Script" path="res://Enemies/enemy.gd" id="1_wj6ca"]
[ext_resource type="Texture2D" uid="uid://d3g8e345tck1n" path="res://Assets/Textures/Enemy/kolbold_strong.png" id="2_263pv"]
[ext_resource type="PackedScene" uid="uid://b7fn7x0620o70" path="res://Utility/hit_box.tscn" id="3_vkdev"]
[ext_resource type="PackedScene" uid="uid://ci0lyi4ieonoi" path="res://Utility/hurt_box.tscn" id="4_7jw0r"]
[ext_resource type="AudioStream" uid="uid://btnn0022u4vpn" path="res://Assets/Audio/SoundEffect/enemy_hit.ogg" id="5_6cut3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n3rgk"]
radius = 3.0
height = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_oqi6e"]
atlas = ExtResource("2_263pv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wvyp"]
atlas = ExtResource("2_263pv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_i2fba"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqi6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wvyp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66i8d"]
size = Vector2(12, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vy4n"]
size = Vector2(28, 32.3334)

[node name="enemy_kobold_strong" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 2
motion_mode = 1
script = ExtResource("1_wj6ca")
hp = 20.0
movement_speed = 28.0
enemy_damage = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_n3rgk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_i2fba")
autoplay = "default"

[node name="HitBox" parent="." instance=ExtResource("3_vkdev")]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-1, 1.5)
shape = SubResource("RectangleShape2D_66i8d")

[node name="HurtBox" parent="." instance=ExtResource("4_7jw0r")]
collision_layer = 4
collision_mask = 2
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-1, 0.166675)
shape = SubResource("RectangleShape2D_2vy4n")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_6cut3")
volume_db = -20.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HitBox"]
[editable path="HurtBox"]
